Не надо сюда даже смотреть, не то что открывать файлы
