# docs/swagger.yaml
@@ -1,7 +1,5 @@
 basePath: /api/v1
 definitions:
-  domain.Project:
-    type: object
   domain.TokenPair:
     properties:
       access_token:
@@ -9,17 +7,93 @@ definitions:
       refresh_token:
         type: string
     type: object
+  handler.CreateProjectRequest:
+    properties:
+      description:
+        example: Описание проекта
+        type: string
+      name:
+        example: Новый проект
+        type: string
+      photo:
+        example:
+        - '[''photo1.jpg'''
+        - ' ''photo2.jpg'']'
+        items:
+          type: string
+        type: array
+      subtitle:
+        example: Подзаголовок проекта
+        type: string
+      tags:
+        example:
+        - '[''tag1'''
+        - ' ''tag2'']'
+        items:
+          type: string
+        type: array
+      title:
+        example: Заголовок проекта
+        type: string
+    required:
+    - name
+    type: object
+  handler.ErrorResponse:
+    properties:
+      error:
+        type: string
+    type: object
   handler.LoginRequest:
     properties:
       email:
+        example: user@example.com
         type: string
       password:
+        example: password123
         type: string
     required:
     - email
     - password
     type: object
-  handler.RefreshRequest:
+  handler.ProjectResponse:
+    properties:
+      created_at:
+        example: "2024-03-20T12:00:00Z"
+        type: string
+      description:
+        example: Описание проекта
+        type: string
+      id:
+        example: 1
+        type: integer
+      name:
+        example: Новый проект
+        type: string
+      photo:
+        example:
+        - '[''photo1.jpg'''
+        - ' ''photo2.jpg'']'
+        items:
+          type: string
+        type: array
+      subtitle:
+        example: Подзаголовок проекта
+        type: string
+      tags:
+        example:
+        - '[''tag1'''
+        - ' ''tag2'']'
+        items:
+          type: string
+        type: array
+      title:
+        example: Заголовок проекта
+        type: string
+      user_id:
+        example: 1
+        type: integer
+    type: object
+  handler.RefreshTokenRequest:
     properties:
       refresh_token:
         type: string
@@ -28,16 +102,74 @@ definitions:
     type: object
   handler.RegisterRequest:
     properties:
+      city:
+        example: Moscow
+        type: string
+      country:
+        example: Russia
+        type: string
       email:
+        example: user@example.com
+        type: string
+      first_name:
+        example: John
+        type: string
+      last_name:
+        example: Doe
         type: string
       password:
+        example: password123
         minLength: 6
         type: string
+      phone:
+        example: "+79001234567"
+        type: string
+      role:
+        example: user
+        type: string
+      tags:
+        example:
+        - '[''tag1'''
+        - ' ''tag2'']'
+        items:
+          type: string
+        type: array
     required:
     - email
+    - first_name
+    - last_name
     - password
     type: object
-host: localhost:8080
+  handler.UpdateProjectRequest:
+    properties:
+      description:
+        example: Новое описание
+        type: string
+      name:
+        example: Обновленный проект
+        type: string
+      photo:
+        example:
+        - '[''new_photo1.jpg'''
+        - ' ''new_photo2.jpg'']'
+        items:
+          type: string
+        type: array
+      subtitle:
+        example: Новый подзаголовок
+        type: string
+      tags:
+        example:
+        - '[''new_tag1'''
+        - ' ''new_tag2'']'
+        items:
+          type: string
+        type: array
+      title:
+        example: Новый заголовок
+        type: string
+    type: object
+host: localhost:8000
 info:
   contact: {}
   description: API для управления проектами
@@ -48,7 +180,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: Аутентифицирует пользователя и возвращает токены
+      description: Аутентифицирует пользователя и возвращает токены доступа
       parameters:
       - description: Данные для входа
         in: body
@@ -66,21 +198,15 @@ paths:
         "400":
           description: Bad Request
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/handler.ErrorResponse'
         "401":
           description: Unauthorized
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/handler.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/handler.ErrorResponse'
       summary: Вход в систему
       tags:
       - auth
@@ -95,7 +221,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/handler.RefreshRequest'
+          $ref: '#/definitions/handler.RefreshTokenRequest'
       produces:
       - application/json
       responses:
@@ -128,7 +254,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: Создает нового пользователя и возвращает токены
+      description: Создает нового пользователя и возвращает токены доступа
       parameters:
       - description: Данные для регистрации
         in: body
@@ -139,27 +265,25 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
           schema:
             $ref: '#/definitions/domain.TokenPair'
         "400":
           description: Bad Request
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/handler.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/handler.ErrorResponse'
       summary: Регистрация нового пользователя
       tags:
       - auth
   /projects:
     get:
+      consumes:
+      - application/json
       description: Возвращает список всех проектов
       produces:
       - application/json
@@ -168,14 +292,12 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/domain.Project'
+              $ref: '#/definitions/handler.ProjectResponse'
             type: array
         "500":
           description: Internal Server Error
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/handler.ErrorResponse'
       summary: Получение всех проектов
       tags:
       - projects
@@ -186,34 +308,32 @@ paths:
       parameters:
       - description: Данные проекта
         in: body
-        name: project
+        name: request
         required: true
         schema:
-          $ref: '#/definitions/domain.Project'
+          $ref: '#/definitions/handler.CreateProjectRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/domain.Project'
+            $ref: '#/definitions/handler.ProjectResponse'
         "400":
           description: Bad Request
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/handler.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/handler.ErrorResponse'
       summary: Создание нового проекта
       tags:
       - projects
   /projects/{id}:
     delete:
+      consumes:
+      - application/json
       description: Удаляет проект по указанному ID
       parameters:
       - description: ID проекта
@@ -221,25 +341,25 @@ paths:
         name: id
         required: true
         type: integer
+      produces:
+      - application/json
       responses:
         "204":
           description: No Content
         "400":
           description: Bad Request
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/handler.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/handler.ErrorResponse'
       summary: Удаление проекта
       tags:
       - projects
     get:
+      consumes:
+      - application/json
       description: Возвращает проект по указанному ID
       parameters:
       - description: ID проекта
@@ -253,19 +373,15 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/domain.Project'
+            $ref: '#/definitions/handler.ProjectResponse'
         "400":
           description: Bad Request
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/handler.ErrorResponse'
         "404":
           description: Not Found
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/handler.ErrorResponse'
       summary: Получение проекта по ID
       tags:
       - projects
@@ -281,30 +397,58 @@ paths:
         type: integer
       - description: Данные проекта
         in: body
-        name: project
+        name: request
         required: true
         schema:
-          $ref: '#/definitions/domain.Project'
+          $ref: '#/definitions/handler.UpdateProjectRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/domain.Project'
+            $ref: '#/definitions/handler.ProjectResponse'
         "400":
           description: Bad Request
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/handler.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/handler.ErrorResponse'
       summary: Обновление проекта
+      tags:
+      - projects
+  /projects/search:
+    get:
+      consumes:
+      - application/json
+      description: Возвращает список проектов, названия которых содержат поисковый
+        запрос
+      parameters:
+      - description: Поисковый запрос
+        in: query
+        name: q
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/handler.ProjectResponse'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      summary: Поиск проектов по названию
       tags:
       - projects
 schemes:
